--- a/korea_second.css
+++ b/korea_second.css
@@ -28,6 +28,7 @@ h1 {
 
 img {
   width: 20%;
+  border: 10px solid lightgray;
 }
 
 #second-day {
@@ -126,6 +127,17 @@ h3 {
   font-size: 40px;
   padding-bottom: 10px;
   margin-bottom: 20px;
+}
+
+#tower-img-one {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+#tower-text {
+  background-color: lightgray;
+  padding: 15px;
 }
 
 footer {
